# pyload

./: .env.example  .pre-commit-config.yaml  Makefile  docker-compose.yml  init.sql  main.py  pyproject.toml
app/: main.py
app/accounts/: routers.py
app/accounts/domain/: __init__.py  dependences.py  models.py  services.py
app/accounts/repositories/: __init__.py  account_password_repository.py  account_repository.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/core/: config.py
app/core/database/: session.py  transactional.py
app/core/models/: __init__.py
app/users/: __init__.py  routers.py
core/: __init__.py  config.py
core/database/: __init__.py  session.py  timestamp.py  transactional.py
core/kafka/: consumer.py  producer.py
core/middlewares/: response_logger.py  sqlalchemy.py
core/models/: __init__.py
core/repository/: base.py
core/security/: __init__.py  auth.py  google_auth.py  password.py
core/unit_of_work/: __init__.py  abs.py  unit_of_work.py
core/utils/: __init__.py  datetime.py  json.py
migration/: env.py  models.py
migration/versions/: 2ffb2edf6aac_init_table_account.py  3428e249b633_init_user_table.py  4f72df53f55e_add_scheduler_fields_to_download_tasks.py  59f349a17810_init_table_download_tasks_and_outbox_.py  9239191a4f00_init_table_download_tasks_and_outbox_.py  d5a7630b2431_init_user_table.py
services/api/: accounts_router.py  download_tasks_router.py  main.py
services/outbox_publisher/: main.py  publisher.py
services/scheduler/: main.py  service.py
services/worker/: downloaders.py  main.py  service.py
(+45 files in other folders)
